--- a/packages/pkg1/package.json
+++ b/packages/pkg1/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "@qftjs/monorepo1",
-  "version": "1.0.4-beta.3",
+  "name": "@wyq/monorepo1",
+  "version": "1.0.0",
   "description": "",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "files": [
-    "lib"
+    "lib",
+    "es"
   ],
   "publishConfig": {
     "access": "public"
@@ -18,7 +19,7 @@
   "author": "qi.futao",
   "license": "ISC",
   "dependencies": {
-    "@qftjs/monorepo2": "workspace:*",
+    "@wyq/monorepo2": "workspace:1.0.0",
     "axios": "^0.27.2"
   }
 }
