--- a/packages/pkg2/package.json
+++ b/packages/pkg2/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "@qftjs/monorepo2",
-  "version": "1.0.4-beta.0",
+  "name": "@wyq/monorepo2",
+  "version": "1.0.0",
   "description": "",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "files": [
-    "lib"
+    "lib",
+    "es"
   ],
   "publishConfig": {
     "access": "public"
